src/App.css
#root {
  height: 100vh;
  background: #ffbf00;
  display: flex;
  align-items: center;
  justify-content: center;
}

#app {
  position: absolute;
  background: #ffbf00;
  height: 99.2vh;
  width: 99.2vw;
  display: grid;

  grid-template-columns: 8fr 4fr;
  grid-template-rows: repeat(12, 1fr);
  grid-gap: 0.8vh 0.4vw;
}

#events {
  padding: 2vh;
  white-space: nowrap;
  overflow: hidden;
  position: relative;

  text-shadow: 0 0 1vw rgba(0, 0, 0, 0.9);

  color: #ffbf00;
  background: #000;
  background-image: url('linkki_bg.png');
  background-size: 80vh;
  background-position: center;
  background-repeat: no-repeat;

  line-height: 3.5vh;
  font-size: 3.5vh;

  grid-row: 1 / 9;
  grid-column: 1 / 1;
}

#events ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

#events h2 {
  font-weight: normal;
  font-size: 6vh;

  padding: 0;
  margin: 0;
  margin-bottom: 2vh;
}

#sponsors {
  height: 100%;
  width: 100%;
  position: absolute;
  background: #000;
  color: #ffbf00;
  text-align: center;

  grid-row: 9 / 13;
  grid-column: 1;
}

#sponsors h2 {
  color: #ffbf00;
  margin-top: 1vh;
  margin-bottom: 1vh;
  font-weight: normal;
  font-size: 4vh;
}

#sponsorsLogos {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 65%;
}

#sponsors img {
  filter: grayscale(100%) invert(100%) sepia(100%);
}

#lunch {
  padding: 3vh;
  position: relative;


  text-shadow: 0 0 1vw rgba(0, 0, 0, 0.9);

  color: #ffbf00;
  background: #000;

  line-height: 3vh;
  font-size: 3.5vh;

  grid-row: 1 / 9;
  grid-column: 2 / 13;
}

#lunch ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
  font-size: 3vh;
}

#lunch h2 {
  color: #ffbf00;
  margin-top: 1vh;
  margin-bottom: 1vh;
  font-weight: normal;
  font-size: 4vh;
  text-align: center;
}

#app:after {
  content:"";
  position:absolute;
  right:0;
  top: 0;
  height:100%;
  width:100%;
  background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.2) 50%, rgba(0,0,0,0));
  background-position: center 20%;
  background-size: 100% 12vh ;
  animation: scanlines 30s linear infinite;
}

#events:after {
  content:"";
  position:absolute;
  right:0;
  top: 0;
  height:100%;
  width:10vw;
  background: linear-gradient(90deg, rgba(0,0,0,0), #000);
  background-position: center;
  background-size: 100% calc(100% - 0.8vw);
  background-repeat: no-repeat;
}

#sponsors:after {
  content:"";
  position:absolute;
  right:0;
  top: 0;
  height:100%;
  width:100%;
  background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.4) 50%, rgba(0,0,0,0));
  background-position: center 20%;
  background-size: 100% 0.5vh;
}

#lunch:after {
  content:"";
  position:absolute;
  right:0;
  top: 0;
  height:100%;
  width:10vw;
  background: linear-gradient(90deg, rgba(0,0,0,0), #000);
  background-position: center;
  background-size: 100% calc(100% - 0.8vw);
  background-repeat: no-repeat;
}

@keyframes scanlines {
  0%   { background-position: center 0vh }
  100% { background-position: center 96vh }
}

